fix: spacing between delete and edit actions

--- a/src/components/Comments/CommentActions/CommentActions.module.scss
+++ b/src/components/Comments/CommentActions/CommentActions.module.scss
@@ -3,7 +3,7 @@
 .actions {
     display: flex;
     align-items: center;
-    gap: 2.4rem;
+    gap: 2rem;
 
     font-size: 1.6rem;
 
